Swagger updated, random10 route working
